First Texturea added ,2 button 1 tittle bar , 1 label 1 image

--- a/MyApp/MyApp/MyApp.csproj
+++ b/MyApp/MyApp/MyApp.csproj
@@ -59,18 +59,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -81,16 +81,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Screenshot_20250214-232908.png" />
+    <None Include="Resources\MossyRocks_LateNightSky.gif" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SUschi.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Image1.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\download %284%29.jpg" />
+    <Content Include="Resources\CloseButton.png" />
+    <Content Include="Resources\CloseButtonHover.png" />
+    <Content Include="Resources\SettingButton.png" />
+    <Content Include="Resources\SettingButtonHover.png" />
+    <Content Include="Resources\Texture1.jpg" />
+    <Content Include="Resources\WoodTitleBar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
